proxmox-talos/apps/wallabag/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallabag
  labels:
    name: wallabag
